kubernetes/nginx-ingress/0-namespace.yaml
# RBAC still needs work. Rolebinding per namespace ingress objects are.
# Last time rendered from chart: nginx-ingress-0.28.3
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress-tools
  labels:
    name: nginx-ingress-tools
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: tools
---
# Default deny all ingress & egress policy, except allow kube-dns
# All traffic except this must be explicity allowed.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-except-kube-dns
  namespace: nginx-ingress-tools
  labels:
    app.kubernetes.io/name: nginx-ingress
spec:
  podSelector: {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Ingress
  - Egress
