kubernetes/nginx-ingress/nginx-ingress-tools.yaml
---
# Source: nginx-ingress/templates/controller-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller-metrics
  namespace: nginx-ingress-tools
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: tools
spec:
  ports:
  - name: metrics
    port: 9913
    targetPort: metrics
  selector:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: tools
  type: ClusterIP
---
# Source: nginx-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: nginx-ingress-tools
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: tools
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: tools
  type: LoadBalancer
---
# Source: nginx-ingress/templates/controller-daemonset.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: nginx-ingress-tools
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: tools
spec:
  replicas: 2
  revisionHistoryLimit: 1
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-ingress
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: tools
    spec:
      dnsPolicy: ClusterFirst
      # Pin controller to arm64 nodes as nodes plentiful and image arch pinned
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - controller
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - nginx-ingress
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - tools
              topologyKey: kubernetes.io/hostname
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - controller
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - nginx-ingress
                - key: app.kubernetes.io/instance
                  operator: In
                  values:
                  - tools
              topologyKey: failure-domain.beta.kubernetes.io/zone
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller-arm64:0.24.1
        imagePullPolicy: Always
        args:
        - /nginx-ingress-controller
        - --election-id=ingress-controller-leader
        - --ingress-class=tools
        - --configmap=nginx-ingress-tools/nginx-ingress-controller
        - --v=10
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
          # www-data -> 33
          runAsUser: 33
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        - name: metrics
          containerPort: 10254
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 300m
            memory: 200Mi
          requests:
            cpu: 300m
            memory: 200Mi
      hostNetwork: false
      serviceAccountName: nginx-ingress
      terminationGracePeriodSeconds: 60
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: nginx-ingress-tools
  labels:
    app.kubernetes.io/name: nginx-ingress
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: tools
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nginx-ingress
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: tools
  egress:
  # Kube API for endpoint resolution
  - ports:
    - port: 443  # kubernetes.default.svc Port
      protocol: TCP
    - port: 6443  # kubernetes.default.svc TargetPort
      protocol: TCP
    to:
    - ipBlock:
        cidr: 192.168.2.32/28  # k8s-m-[amd64|arm64]-[00-0x]
    - ipBlock:
        cidr: 10.233.0.1/32  # kubernetes.default.svc
    - ipBlock:
        cidr: 192.168.99.100/32  # minikube IP kubernetes.default.svc
  ingress:
  # Allow external traffic
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
  # Allow Prometheus scrape
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - prometheus
        - key: prometheus
          operator: In
          values:
          - k8s
      namespaceSelector:
        matchLabels:
          name: prometheus
    ports:
    - port: metrics
      protocol: TCP
  policyTypes:
  - Egress
  - Ingress
